# training-task-2018-08-04

./: .gitignore  README.txt
courses/: .gitignore
courses/estimation_and_learning/: README.md
courses/estimation_and_learning/AssignmentWEEK4/: particleLocalization.m  particleLocalization_my3.m
courses/perception/: projective_transformations.ipynb
courses/perception/week2/: asignment_week2_another_method.m  assignment_week2.m
courses/perception/week3/: ar_cube.m  track_corners.m
courses/perception/week4/: EssentialMatrixFromFundamentalMatrix.m  EstimateFundamentalMatrix.m  LinearPnP.m  LinearTriangulation.m  Nonlinear_Triangulation.m  homography__skew_symmetric.ipynb
cpp/: .gitignore
cpp/202003_design_patterns_in_modern_cpp/: CMakeLists.txt
cpp/202003_design_patterns_in_modern_cpp/chain_of_responsibility/: CMakeLists.txt  main.cpp  task.txt
cpp/arithmetic/: division  division.cpp
cpp/hackerrank/: CMakeLists.txt  README.md
cpp/hackerrank/find-the-running-median/: CMakeLists.txt  launch.sh  launcher.cpp
cpp/leetcode/: CMakeLists.txt  conanfile.txt
cpp/leetcode/00001/: CMakeLists.txt  solution.hpp  test.cpp
cpp/leetcode/00002/: t00002.cpp
cpp/leetcode/00004/: CMakeLists.txt  launcher.cpp  solution.hpp  test.cpp
cpp/leetcode/00005/: 00005.cpp
cpp/leetcode/00006/: solution.cpp
cpp/leetcode/00010/: CMakeLists.txt  launcher.cpp  solution.hpp  test.cpp
cpp/leetcode/00023/: CMakeLists.txt  launcher.cpp  list_node.h  solution.hpp  test.cpp
cpp/leetcode/00045/: CMakeLists.txt  launcher.cpp  solution.hpp  test.cpp
cpp/leetcode/00239/: CMakeLists.txt  launcher.cpp  solution.hpp
cpp/leetcode/01335/: CMakeLists.txt  solution.cpp
cpp/leetcode/01438/: CMakeLists.txt  solution.cpp
cpp/tst_conan/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
cpp/tst_conan/app/: app.cpp
cpp/tst_conan/app_with_external_dependency/: CMakeLists.txt  main.cpp
cpp/tst_conan/lib/: CMakeLists.txt  func_lib.cpp  func_lib.h
cpp/tst_conan/tests/: CMakeLists.txt  catch2_test.cpp
cpp/vscode_with_clang/: README.md  main.c
inter/: .gitignore
inter/202010_kopernikus/: k1.py  k2.py
ml/20200419_fashion_mnist/: .gitignore  2020041907_port3_fashion_mnist_with_test.py  2020041907_port5_fashion_mnist_norm.py  202004191231_fashion_mnist_crop_norm_no_tfms_on_val.py  202004191306_fashion_mnist_lr2.py  202004191500_fashion_mnist_augm_crop_rot.py  202004192100_fashion_mnist_resnet.py  202004192100_fashion_mnist_resnet2.py  202004192200_fashion_mnist_resnet_sgd.py  202004192300_fashion_mnist_mobilenetv2_1.py  2020042523_Resnetish9_1intro_layer_L1_64_2_s2_L2_128_2_s2_L3_256_s2_avg_pool.py  2020042701_fashion_mnist_resnet_redo_w_smaller_intro_kernel_report_grads.py  README.md  pytorch_vis.py  report.md  requirements.txt
ml/20201215_licence_plate/: .gitignore  README.md  copy_converted_annotations.py  darknet_facade.py  detect_lp.py  draw_lp.py  install.sh  prepare_data_for_training.sh  requirements.txt  train_yolo4_lp.ipynb
ml/20210115_basics_of_pytorch/: pytorch_basic_optimization_tutorial.py
ml/202101_deep_neural_networks_with_pytorch/: 4.3.multi-target_linear_regression.ipynb  6.2lab_predicting _MNIST_using_Softmax_v2.ipynb  7.4one_layer_neural_network_MNIST.ipynb  8.1.1mist2layer_v2.ipynb  9.1What_is_Convolution.ipynb  9.2Activation_max_pooling (1).ipynb  9.3Multiple Channel Convolution.ipynb  9.4.3CNN_Small_Image_batch.ipynb
python/: .gitignore
python/algorithms/: fenwick_tree.py
python/amazon/: aircraft_root_optimization.py  five_star_sellers.py  pairs_array.py
python/leetcode/: 00302.py  00489.py  00853.py
rust/guessing_game/: Cargo.toml
rust/hello_server/: Cargo.toml
rust/leetcode/: Cargo.toml
rust/rust_exercises/: Cargo.toml
rust/vscode_rust_template/: Cargo.toml  README.md
task1/: README.md  analysis.ipynb  data_loader.py  draft_insert_sqlalchemy.ipynb  insert_sqlalchemy.ipynb  main.py  test_main.py
task2/: README.md  brackets_sequence.py  requirements-test.txt  run_tests.sh
task2/brackets/: brackets_sequence.py
task2/tests/: brackets_sequence.py  test_brackets_sequence.py  test_validator.py
(+287 files in other folders)
